--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h5>Welcome to the POSTing project template!</h5>
+<h5>Welcome to the POSTing project for TeaLeaf!</h5>
 <h4>Hi there!! </h4>
 
 Here are the index of posts:
