--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,19 +1,22 @@
 <div class='row'>
 	<div class='span1 text-center well'>
-		<%= link_to "Click to Upvote", vote_post_path(post, vote: true), method: 'post' %>
+		<%= link_to "Click to Upvote", vote_post_path(post, vote: true), method: 'post', remote: true %>
 		<br/>
-		<%= "total: " + post.total_votes.to_s %>
+		<%= "Total: " %>
+		<span id="post_<%=post.id%>_votes"><%= post.total_votes.to_s %></span>
 		<br/>
-		<%= link_to "Downvote", vote_post_path(post, vote: false), method: 'post' %>
+		<%= link_to "Downvote", vote_post_path(post, vote: false), method: 'post', remote: true %>
 
 	</div>
 
 
 	<div class="span6 well">
 
-		<h4><%= link_to post.title, fix_url(post.url), :target => :blank %><% if current_user == post.user %><%= link_to 'edit', edit_post_path(post), {:class => 'btn btn-primary'} %>
+		<h4><%= link_to post.title, fix_url(post.url), :target => :blank %><% if current_user == post.user %><h6><%= link_to 'edit', edit_post_path(post), {:class => 'btn btn-primary'} %>
 		
 			<% end %>
+			<%= link_to 'post details', post_path(post), {:class => 'btn btn-primary'}%>
+	</h6>
 			</h4>
 			<p><%= post.description %></p>
 			<p><span> Posted by: </span><%= post.user.username %> at <small><%= post.created_at.to_s %></small></p>
